# axon-prototype-2

./: .gitignore  .gitmodules  Makefile  README.md  build.gradle  settings.gradle
axon-ckb-contracts/: .gitignore  Cargo.toml  Compose.md  Makefile  README.md  capsule.toml  deployment.toml  rustfmt.toml
axon-ckb-contracts/ckb-lib-secp256k1/: Cargo.toml  build.rs
axon-ckb-contracts/ckb-lib-secp256k1/src/: code_hashes.rs  libsecp256k1.rs
axon-ckb-contracts/common/: Cargo.toml  Compose.md  build.rs  global_config_type_hash.example
axon-ckb-contracts/common-raw/: Cargo.toml
axon-ckb-contracts/common-raw/src/: common.rs  lib.rs  pattern.rs
axon-ckb-contracts/common-raw/src/cell/: checker_bond.rs  checker_info.rs  code.rs  global_config.rs  mod.rs  muse_token.rs  sidechain_bond.rs  sidechain_config.rs  sidechain_fee.rs  sidechain_registry.rs  sidechain_state.rs  sudt_token.rs  task.rs
axon-ckb-contracts/common-raw/src/molecule/: common.mol  common.rs  mod.rs
axon-ckb-contracts/common-raw/src/witness/: admin_create_sidechain.rs  anyone_refresh_task.rs  anyone_shutdown_sidechain.rs  checker_bond_withdraw.rs  checker_join_sidechain.rs  checker_publish_challenge.rs  checker_quit_sidechain.rs  checker_submit_challenge.rs  checker_submit_task.rs  checker_take_beneficiary.rs  checker_vote.rs  code_cell_witness.rs  collator_publish_task.rs  collator_refresh_task.rs  collator_shutdown_sidechain.rs  collator_submit_challenge.rs  collator_submit_task.rs  collator_submit_tasks.rs  collator_unlock_bond.rs  common_submit_jobs.rs  mod.rs
axon-ckb-contracts/common/src/: cell.rs  error.rs  hash.rs  lib.rs  pattern.rs
axon-ckb-contracts/common/src/cell/: checker_bond.rs  checker_info.rs  code.rs  global_config.rs  mod.rs  muse_token.rs  sidechain_bond.rs  sidechain_config.rs  sidechain_fee.rs  sidechain_state.rs  sudt_token.rs  task.rs
axon-ckb-contracts/common/src/witness/: admin_create_sidechain.rs  checker_bond_withdraw.rs  checker_join_sidechain.rs  checker_publish_challenge.rs  checker_quit_sidechain.rs  checker_submit_challenge.rs  checker_submit_task.rs  checker_take_beneficiary.rs  collator_publish_task.rs  collator_refresh_task.rs  collator_submit_challenge.rs  collator_submit_task.rs  collator_unlock_bond.rs  mod.rs
axon-ckb-contracts/contracts/always-success/: Cargo.toml
axon-ckb-contracts/contracts/checker-bond-cell-lockscript/: Cargo.toml
axon-ckb-contracts/contracts/checker-bond-cell-lockscript/src/: entry.rs  error.rs  main.rs
axon-ckb-contracts/contracts/checker-bonding-lock/: Cargo.toml
axon-ckb-contracts/contracts/checker-bonding-lock/src/: entry.rs
axon-ckb-contracts/contracts/checker-info-cell-typescript/: Cargo.toml
axon-ckb-contracts/contracts/checker-info-cell-typescript/src/: entry.rs  error.rs
axon-ckb-contracts/contracts/code-cell/: Cargo.toml
axon-ckb-contracts/contracts/code-cell/src/: anyone_refresh_task.rs  anyone_shutdown_sidechain.rs  cell.rs  checker_bond_withdraw.rs  checker_join_sidechain.rs  checker_publish_challenge.rs  checker_quit_sidechain.rs  checker_submit_challenge.rs  checker_submit_task.rs  checker_take_beneficiary.rs  checker_vote.rs  collator_publish_task.rs  collator_refresh_task.rs  collator_settle_challenges.rs  collator_shutdown_sidechain.rs  collator_submit_challenge.rs  collator_submit_faild_challenge.rs  collator_submit_success_challenge.rs  collator_submit_task.rs  collator_submit_tasks.rs  collator_unlock_bond.rs  common.rs  entry.rs  error.rs  main.rs  pattern.rs
axon-ckb-contracts/contracts/sidechain-bond-cell-lockscript/: Cargo.toml
axon-ckb-contracts/contracts/sidechain-bond-cell-lockscript/src/: entry.rs  error.rs
axon-ckb-contracts/contracts/sidechain-bonding-lock/: Cargo.toml
axon-ckb-contracts/contracts/sidechain-bonding-lock/src/: entry.rs  error.rs
axon-ckb-contracts/contracts/sidechain-config-cell/: Cargo.toml
axon-ckb-contracts/contracts/sidechain-config-cell-typescript/: Cargo.toml
axon-ckb-contracts/contracts/sidechain-config-cell-typescript/src/: entry.rs  error.rs  main.rs
axon-ckb-contracts/contracts/sidechain-fee-cell-lockscript/: Cargo.toml
axon-ckb-contracts/contracts/sidechain-fee-lock/: Cargo.toml
axon-ckb-contracts/contracts/sidechain-state-cell-typescript/: Cargo.toml
axon-ckb-contracts/contracts/sidechain-state-lock/: Cargo.toml
axon-ckb-contracts/contracts/task-cell-typescript/: Cargo.toml
axon-ckb-contracts/schemas/: Cargo.toml
axon-ckb-contracts/schemas/src/: checker_info_cell.mol  checker_info_cell.rs  lib.rs  sidechain_fee_cell.mol  sidechain_fee_cell.rs  sidechain_state_cell.mol  sidechain_state_cell.rs
axon-ckb-contracts/tests/: Cargo.toml
axon-ckb-contracts/tests/src/: common.rs  environment_builder.rs  lib.rs  secp256k1.rs  test_always_success.rs  test_anyone_shutdown_sidechain.rs  test_checker_bonding_lock.rs  test_checker_vote.rs  test_checker_withdraw.rs  test_collator_publish_task.rs  test_collator_shutdown_sidechain.rs  test_collator_submit_faild_challenge.rs  test_collator_submit_success_challenge.rs  test_collator_submit_task.rs  test_collator_submit_tasks.rs  test_collator_unlock.rs  test_join_sidechain.rs  test_publish_challenge.rs  test_quit_sidechain.rs  test_refresh_task.rs  test_sidechain_bonding_lock.rs  test_sidechain_fee_lock.rs  test_sidechain_state_lock.rs  test_submit_challenge.rs  test_submit_task.rs  test_take_beneficiary.rs
deploy/: memo.md  (+1 more)
(+241 files in other folders)
