[workspace]
members = [
    "tests",
    "contracts/always-success",
    "contracts/checker-bonding-lock",
    "contracts/sidechain-bonding-lock",
    "contracts/sidechain-fee-lock",
    "contracts/sidechain-state-lock",
    "contracts/sidechain-config-cell",
    "common"
]

[profile.release]
overflow-checks = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'