[workspace]
members = [
    #"tests",
    "contracts/code-cell",
    "contracts/always-success",
    "contracts/checker-bond-cell-lockscript",
    "contracts/checker-info-cell-typescript",
    "contracts/task-cell-typescript",
    "contracts/sidechain-bond-cell-lockscript",
    "contracts/sidechain-fee-cell-lockscript",
    "contracts/sidechain-state-cell-typescript",
    "contracts/sidechain-config-cell-typescript",
    "common",
]

[profile.release]
overflow-checks = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
