[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = {version = "0.7.4",default-features = false }
blake2b-ref = "0.3"
#ckb-standalone-types = {version = "0.0.1-pre.1", default-features = false}
#molecule = { version = "0.6", default-features = false }
bit-vec = { version = "0.6", default-features = false }

common-raw = { path = "../common-raw" }

[features]
default = ["ckb-std/ckb-types","ckb-std/allocator"]
