[package]
name = "common"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
ckb-std = {version = "0.7.4",default-features = false }
common-raw = { path = "../common-raw" }

[features]
default = ["ckb-std/ckb-types","ckb-std/allocator"]
