[package]
name = "schemas"
version = "0.1.0"
authors = ["handsome0hell <handsome0hell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
molecule = { version = "0.6.0", default-features = false }

[features]
std = ["molecule/std"]
