[package]
name = "sidechain-config-cell-typescript"
version = "0.1.0"
authors = ["LycrusHamster <liang2929@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = {version = "0.7.4",default-features = false }
#ckb-lib-secp256k1 = { path = "../../ckb-lib-secp256k1" }
common = {path = "../../common"}

[features]
default = ["ckb-std/ckb-types","ckb-std/allocator"]
