[package]
name = "sidechain-fee-cell-lockscript"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.4"
ckb-lib-secp256k1 = { path = "../../ckb-lib-secp256k1" }
common = {path = "../../common"}
